--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-*.py[cod]
-*~
-__pycache__
-venv
-.venv
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual Environment
+.venv/
+venv/
+
+# Environment Variables
 .env
-.git
-.idea
+
+# IDE
+.idea/
+.vscode/
